Revision history for Test-WWW-Mechanize

WWW::Mechanize and Test::WWW::Mechanize do not use rt.cpan.org for
bug tracking.  They are now being tracked via GitHub at
https://github.com/petdance/test-www-mechanize/issues


NEXT
------------------------------------
[ENHANCMENTS]
Added default test messages for button_exists_ok and lacks_button_ok
methods.  Thanks, Daniel Böhmer (GH#70)

[DOCUMENTATION]
Clarified some wording.  Thanks, Daniel Böhmer (GH#70)


1.58    Fri Apr 29 11:23:39 CDT 2022
------------------------------------
[ENHANCEMENTS]
Failed get_ok, post_ok, head_ok, put_ok, delete_ok calls now show the URL
as a diagnostic if there's a problem accessing the URL.  This apply to
functions like submit_form_ok() and follow_link_ok() that are wrappers
around these methods.


1.56    Tue Apr 26 22:14:12 CDT 2022
------------------------------------
This version of Test::WWW::Mechanize requires Perl 5.10.

[ENHANCEMENTS]
Add check_all_images_ok(). (GH #17)  Thanks, Julien Fiegehenn.
This is the first version of this function, and its functionality may
change in the near future.

[DOCUMENTATION]
Fixed some incorrect docs. Thanks, Daniel Böhmer.

[INTERNALS]
Require Perl 5.10.

Explicitly requires HTTP::Message 6.29 or higher.


1.54    Tue Dec  8 23:25:06 CST 2020
------------------------------------
[ENHANCEMENTS]
Use ok() instead of cmp_ok() inside of lacks_uncapped_inputs().
This output makes more sense.

lacks_uncapped_inputs() now has a a default message if one isn't supplied.

[FIXES]
Fixed the subtest name inside of C<lacks_ids_ok>.

Fixed the minimum version of Carp::Assert::More in Makefile.PL.


1.52    Wed Dec  5 10:00:56 CST 2018
------------------------------------
[ENHANCEMENTS]
click_ok() method can now take a button with X/Y coordinates.
Thanks to GitHub user @marderh.  (GH #45)

Added the ability to modify the HTML that the html_tidy_ok() validates.
See the content_for_validation() method. (GH #61)
