@@ -15,6 +15,8 @@ my $pid         = $server->background;
 my $server_root = $server->root;
 
 SUBMIT_GOOD_FORM: {
+    local @ENV{qw( http_proxy HTTP_PROXY )};
+
     my $mech = Test::WWW::Mechanize->new();
     isa_ok( $mech,'Test::WWW::Mechanize' );
 
@@ -23,7 +25,10 @@ SUBMIT_GOOD_FORM: {
     # XXX We need to check that the request is correct.
 }
 
+
 SUBMIT_GOOD_FORM_WITH_COORDINATES: {
+    local @ENV{qw( http_proxy HTTP_PROXY )};
+
     my $mech = Test::WWW::Mechanize->new();
     isa_ok( $mech,'Test::WWW::Mechanize' );
 
@@ -35,3 +40,5 @@ SUBMIT_GOOD_FORM_WITH_COORDINATES: {
 $server->stop;
 
 done_testing();
+
+exit 0;
