@@ -15,11 +15,13 @@ my $server      = TestServer->new;
 my $pid         = $server->background;
 my $server_root = $server->root;
 
-my $mech = Test::WWW::Mechanize->new( autocheck => 0 );
-isa_ok($mech,'Test::WWW::Mechanize');
-
 my $text = 'This is what we are putting';
 GOOD_PUT: {
+    local @ENV{qw( http_proxy HTTP_PROXY )};
+
+    my $mech = Test::WWW::Mechanize->new( autocheck => 0 );
+    isa_ok($mech,'Test::WWW::Mechanize');
+
     my $scratch = "$server_root/scratch.html";
 
     $mech->put_ok($scratch, {content => $text});
